; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_client.c_client_stop.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_client.c_client_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@client_enabled = common dso_local global i32 0, align 4
@running = common dso_local global i64 0, align 8
@sd = common dso_local global i32 0, align 4
@qsize = common dso_local global i64 0, align 8
@queue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @client_stop() #0 {
  %1 = load i32, i32* @client_enabled, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %9

4:                                                ; preds = %0
  store i64 0, i64* @running, align 8
  %5 = load i32, i32* @sd, align 4
  %6 = call i32 @close(i32 %5)
  store i64 0, i64* @qsize, align 8
  %7 = load i32, i32* @queue, align 4
  %8 = call i32 @free(i32 %7)
  br label %9

9:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @close(i32) #1

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
